# FALCON

./: .gitignore  CONTRIBUTING.md  CURRENT_CAPABILITIES.md  DESIGN_PRINCIPLES.md  FALCON_LANGUAGE.md  IMPORT_SYSTEM_SPEC.md  IR_OWNERSHIP_SPEC.md  KERNEL_SCOPE.md  LICENSE  MEMORY_MODEL.md  OWNERSHIP_RULES.md  PHILOSOPHY.md  README.md  UNSAFE_GUARANTEES.md  WHAT_FALCON_WILL_NEVER_DO.md  WHAT_WE_BUILT.md
compiler/: Cargo.toml  falcon.bat  install-falcon.ps1  run_falcon.bat
compiler/runtime/: falcon_arduino.ld  falcon_avr.ld  falcon_baremetal.ld  falcon_kernel.ld  falcon_runtime.c  falcon_runtime.h  falcon_runtime_arduino.c  falcon_runtime_avr.c  falcon_runtime_baremetal.c  falcon_runtime_kernel.c
compiler/src/: ast.rs  codegen.rs  ir.rs  lexer.rs  lib.rs  llvm_codegen.rs  main.rs  parser.rs  passes.rs  profile.rs
compiler/tests/: profile_import_integration.rs
docs/: hardware_flash_workflow.md
examples/: adwaith_ai.fc  arduino_blink.fc  array_test.c  array_test.fc  avr_minimal.fc  baremetal_blink.fc  baremetal_blink_real_preview.md  baremetal_valid.fc  baremetal_violation.fc  bench_simple.c  bench_simple.fc  bench_simple.py  bench_timed.c  bench_timed.py  benchmark.c  benchmark.fc  benchmark.py  benchmark.rs  benchmark_c.c  benchmark_falcon.fc  benchmark_python.py  benchmark_rust.rs  benchmarks.c  benchmarks.fc  benchmarks.py  benchmarks.rs  bitnot_test.fc  bitwise_simple.fc  bitwise_test.fc  blink_hardware.fc  bool_test.fc  bounds_panic_test.fc  bounds_test.fc  cast_test.fc  closure_comprehensive.c  closure_comprehensive.fc  closure_empty.fc  closure_minimal.fc  (+115 more)
(+39 files in other folders)
